--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -173,7 +173,33 @@
             <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span>
                 {{containerDetailsLoadingMessage}}</h3>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        <span class="fa fa-link"></span>
+                        Links
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-condensed table-hover table-striped"
+                           ng-show="!isEmpty(containerDetails.HostConfig.Links)">
+                        <thead>
+                        <tr>
+                            <th>Link</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="Link in containerDetails.HostConfig.Links">
+                            <td>{{Link}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-md-8">
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 class="panel-title">
