--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -1,7 +1,8 @@
 <div class="col-md-12 pull-right">
     <div class="row">
         <div class="col-md-6">
-            <h3>Containers on: <strong>{{$root.hostUrl}}</strong></h3>
+            <h3><button class="btn btn-success btn-sm" ng-click="$root.goBack()" ng-show="$root.chrome"><span
+                    class="fa fa-arrow-left"></span><strong> Go back</strong></button> Containers on: <strong>{{$root.hostUrl}}</strong></h3>
 
         </div>
         <div class="col-md-6">
