--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='assets/libs/font-awesome/css/font-awesome.min.css'>
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
+    <link rel="stylesheet" href="assets/libs/xterm.js/src/xterm.css">
     <link rel="stylesheet" href="assets/libs/toastr/toastr.min.css">
     <link rel='stylesheet' href='assets/css/custom.css'>
     <link rel='stylesheet' href='assets/css/angular-csp.css'>
