--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -1,6 +1,5 @@
 <div class="col-md-12 ">
-    <h1><button class="btn btn-success btn-sm" ng-click="$root.goBack()" ng-show="$root.chrome"><span
-            class="fa fa-arrow-left"></span><strong> Go back</strong></button> <span class="fa fa-cube"></span> Create container
+    <h1>Create container
         <button title="Create" type="submit" ng-click="createContainer(false)"
                 class="btn btn-success">
             <span class="fa fa-plus"></span> Create
