Starting implementation of 0.3.0

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -24,17 +24,24 @@
 
     <div>
         <h3>Release notes:</h3>
-
         <div>
+            <strong>0.2.9</strong>
+            <ul>
+                <li>Add: link containers in Create</li>
+                <li>Add: show links in container details</li>
+                <li>Add: release notes to about</li>
+                <li>Fix: Create container on/off switch changed from radio to checkbox</li>
+                <li>Fix: CSS/colspan on Repository view</li>
+                <li>Fix: Xterm.js css wasn't imported</li>
+            </ul>
             <strong>0.2.8</strong>
             <ul>
                 <li>Add: image search/pull (from the public repo)</li>
-                <li> Add: copyright when released or published (xterm.js, json-formatter)</li>
-                <li> Add: version info</li>
-                <li> Add: remove button/entry to images list</li>
-                <li> Add: clear finished tasks</li>
-                <li> Fix: clicking on image in container list causes error (need to load all images into the
-                    rootscope)
+                <li>Add: copyright when released or published (xterm.js, json-formatter)</li>
+                <li>Add: version info</li>
+                <li>Add: remove button/entry to images list</li>
+                <li>Add: clear finished tasks</li>
+                <li>Fix: clicking on image in container list causes error (need to load all images into the rootscope)
                 </li>
                 <li> Fix: scrolling in window not enabled as chrome app</li>
             </ul>
