Changing singular to plural @repository view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a class="active" href="#/hosts"><span class="fa fa-server"></span> Hosts</a></li>
                     <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
                     <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
-                    <li><a href="#/repository"><span class="fa fa-cloud"></span> Repository</a></li>
+                    <li><a href="#/repositories"><span class="fa fa-cloud"></span> Repositories</a></li>
                     <li><a href="#/tasks" style="color: red" ng-show="$root.taskInProgress"><span class="fa fa-heartbeat"></span> Tasks <span class="badge">{{$root.tasks.length}}</span></a></li>
                     <li><a href="#/tasks" ng-show="!$root.taskInProgress"><span class=" fa fa-heartbeat"></span> Tasks <span class="badge">{{$root.tasks.length}}</span></a></li>
                     <!--<li><a href="#/events"><span class="fa fa-history"></span> Events</a></li>-->
@@ -81,7 +81,7 @@
 <script src="app/createContainer/createContainer.js"></script>
 <script src="app/images/images.js"></script>
 <script src="app/imageDetails/imageDetails.js"></script>
-<script src="app/repository/repository.js"></script>
+<script src="app/repositories/repositories.js"></script>
 <script src="app/tasks/tasks.js"></script>
 <script src="app/events/events.js"></script>
 <script src="app/about/about.js"></script>
