--- a/app/repositories/repositories.html
+++ b/app/repositories/repositories.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 pull-right">
     <div class="row">
         <div class="col-md-12">
-            <h3>Search/Pull images - totally boilerplate, don't use it pls</h3>
+            <h3>Search/Pull images</h3>
         </div>
     </div>
     <hr/>
