--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -311,9 +311,9 @@
         </div>
         <div class="col-md-12">
             <!--<button type="button" ng-click="downloadAllLogs()"-->
-                    <!--class='btn btn-success'>-->
-                <!--<span class='fa fa-download'></span>-->
-                <!--Download logs-->
+            <!--class='btn btn-success'>-->
+            <!--<span class='fa fa-download'></span>-->
+            <!--Download logs-->
             <!--</button>-->
             <button type="button" ng-click="switchStdOutPanel()"
                     ng-class="{'btn btn-primary': logSettings['showStdOut'], 'btn btn-info': !logSettings['showStdOut']}">
@@ -397,7 +397,7 @@
             <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span>
                 {{containerDiffLoadingMessage}}</h3>
         </div>
-        <div class="col-md-4 vcenter">
+        <div class="col-md-6 vcenter">
             <button type="button" class="btn  btn-primary btn-sm" ng-click="refreshDiffs()">
                 <span class="glyphicon glyphicon-refresh"></span> Refresh
             </button>
@@ -413,11 +413,12 @@
             <button type="button" class="btn btn-default btn-sm" ng-click="lastDiffPage()">
                 Last <span class=" glyphicon glyphicon-step-forward"></span>
             </button>
+            <label>Filter: <input ng-model="search.$"></label>
         </div>
         <div class="col-md-1 vcenter">
             Page {{diffSettings["pageIndex"] }} / {{ diffSettings["maxPageIndex"]}}
         </div>
-        <div class="col-md-7 vcenter text-left">
+        <div class="col-md-4 vcenter text-left">
             Page size:
             <select ng-model="newDiffPageSize" ng-click="changeDiffPaging()">
                 <option>10</option>
@@ -434,10 +435,10 @@
                     <strong>Status</strong>
                 </td>
                 <td width="90%" class="text-center">
-                    <strong>Folders/files <span class="badge">{{diffSettings["count"]}}</span></strong>
+                    <strong>All folders/files <span class="badge">{{diffSettings["count"]}}</span></strong>
                 </td>
             </thead>
-            <tr ng-repeat="diff in containerDiffs track by $index | orderBy:Path">
+            <tr ng-repeat="diff in containerDiffs | filter:search | orderBy:Path">
                 <td class="text-center"><span
                         ng-class="{'glyphicon glyphicon-pencil text-warning':diff.Kind==0,'glyphicon glyphicon-plus text-success':diff.Kind==1,'glyphicon glyphicon-trash text-danger':diff.Kind==2 }"></span>
                 </td>
