--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -59,8 +59,9 @@
                     <span class="glyphicon glyphicon-trash"></span><strong> remove</strong>
                 </button>
                 <button class="btn btn-success btn-sm"
-                        ng-disabled="!canCommit"
-                        ng-click="commitContainer()">
+                        ng-disabled="canCommit"
+                        ng-click="commitContainer()"
+                        data-toggle="modal" data-target="#commitModal">
                     <span class="fa fa-folder"></span><strong> commit</strong>
                 </button>
             </div>
@@ -72,8 +73,35 @@
         <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span>
             {{containerDetailsLoadingMessage}}</h3>
     </div>
-
-    </h1>
+    <div class="modal fade " id="commitModal" tabindex="-1" role="dialog" aria-labelledby="commitModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="commitModalLabel">Commit container</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="col-md-3 vcenter text-right">
+                        <strong>Commit message:</strong>
+                    </div>
+                    <div class="col-md-9 input-group has-feedback form-group">
+                        <form name="imageNameForm">
+                            <input type="text" class="form-control" ng-model="imageName" name="imageNameInput"
+                                   placeholder="Enter the image name" required ng-trim="true">
+                            <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"
+                                  ng-show="!imageNameForm.$error.required"></span>
+                            <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"
+                                  ng-show="!!imageNameForm.$error.required"></span>
+                        </form>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-success">Commit</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="col-md-4">
         <div class="panel panel-success">
             <div class="panel-heading">
