Adding goroutines explanation Adding in progress version to about

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -25,6 +25,15 @@
     <div>
         <h3>Release notes:</h3>
         <div>
+            <strong>0.3.0 - in progress</strong>
+            <ul>
+                <li>+ Add: add search for container diff</li>
+                <li>+ Add: commit container as image</li>
+                <li>- Add: login into the docker hub and/or private repo(s)</li>
+                <li>- Add: push image to the repository</li>
+                <li>- Add: release notes to about/first run of new version</li>
+                <li>+ Fix: removed $promise and $removed properties from the pure json view in containerDetails</li>
+            </ul>
             <strong>0.2.9</strong>
             <ul>
                 <li>Add: link containers in Create</li>
