--- a/app/hostDetails/hostDetails.html
+++ b/app/hostDetails/hostDetails.html
@@ -56,7 +56,7 @@
         <div class="col-md-4 text-right">NFd</div>
         <div class="col-md-5 text-left">{{dockerInfo.NFd|| 'N/A'}}</div>
         <!---->
-        <div class="col-md-4 text-right">Number of go routines</div>
+        <div class="col-md-4 text-right">Number of go routines (threads)</div>
         <div class="col-md-5 text-left"><a href="http://golang.org/pkg/runtime/#NumGoroutine">{{dockerInfo.NGoroutines ||'N/A'}}</a></div>
         <!---->
         <div class="col-md-4 text-right">Events listener subscribers</div>
